--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@metaplex-foundation/umi-bundle-defaults": "^1.2.0",
     "@metaplex-foundation/umi-signer-wallet-adapters": "^1.2.0",
     "@prisma/client": "^6.14.0",
+    "@prisma/extension-optimize": "^2.0.0",
     "@privy-io/react-auth": "^2.21.1",
     "@privy-io/server-auth": "^1.30.0",
     "@radix-ui/react-label": "^2.1.7",
@@ -31,6 +32,7 @@
     "lucide-react": "^0.536.0",
     "next": "15.4.5",
     "pinata": "^2.4.9",
+    "prisma-field-encryption": "^1.6.0",
     "qrcode.react": "^4.2.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
