--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "npx prisma generate --no-engine && next build",
-    "start": "npm run prisma migrate deploy && next start",
+    "start": "npx prisma migrate deploy && next start",
     "lint": "next lint"
   },
   "dependencies": {
