--- a/env.template
+++ b/env.template
@@ -4,8 +4,10 @@ HELIUS_API_KEY=
 TREASURY_WALLET=FEE_WALLET_ADDRESS
 RPC_URL=HELIUS_RPC
 PINATA_JWT=PINATA_JWT
-NEXT_PUBLIC_GATEWAY_URL=PINATA_GATEWAY_URL  
+NEXT_PUBLIC_GATEWAY_URL=PINATA_GATEWAY_URL
 PRIVATE_KEY=LOYALTY_FEE_PAYER
 USDC_MINT=USDC_NETWORK_ADDRESS
 AUTHORIZED_ADDRESS=PROTOCOL_ADMIN_WALLET_ADDRESS
 DATABASE_URL=
+OPTIMIZE_API_KEY=
+PRISMA_FIELD_ENCRYPTION_KEY=
