added gas fee sponsorhip for transactions

--- a/env.template
+++ b/env.template
@@ -6,6 +6,7 @@ RPC_URL=HELIUS_RPC
 PINATA_JWT=PINATA_JWT
 NEXT_PUBLIC_GATEWAY_URL=PINATA_GATEWAY_URL
 PRIVATE_KEY=LOYALTY_FEE_PAYER
+FEE_ADDRESS=FEE_PAYER_PUBLIC_ADDRESS
 USDC_MINT=USDC_NETWORK_ADDRESS
 AUTHORIZED_ADDRESS=PROTOCOL_ADMIN_WALLET_ADDRESS
 DATABASE_URL=
