--- a/env.template
+++ b/env.template
@@ -4,6 +4,7 @@ HELIUS_API_KEY=
 TREASURY_WALLET=FEE_WALLET_ADDRESS
 RPC_URL=HELIUS_RPC
 PINATA_JWT=PINATA_JWT
+NEXT_PUBLIC_PINATA_JWT=PINATA_JWT
 NEXT_PUBLIC_GATEWAY_URL=PINATA_GATEWAY_URL
 PRIVATE_KEY=LOYALTY_FEE_PAYER
 FEE_ADDRESS=FEE_PAYER_PUBLIC_ADDRESS
