added reflect protocol funcitonality

--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@react-three/fiber": "^9.3.0",
     "@reflectmoney/stable.ts": "^2.2.0",
     "@solana-mobile/wallet-standard-mobile": "^0.4.1",
+    "@solana-program/system": "^0.7.0",
+    "@solana-program/token": "^0.7.0",
     "@solana/kit": "^2.3.0",
     "@solana/spl-token": "^0.4.13",
     "@solana/wallet-adapter-react": "^0.15.39",
@@ -38,19 +40,21 @@
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.536.0",
     "next": "15.4.5",
-    "paj_ramp": "^1.2.3",
     "pinata": "^2.4.9",
     "prisma-field-encryption": "^1.6.0",
     "qrcode.react": "^4.2.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-toastify": "^11.0.5",
+    "rpc-websockets": "^9.2.0",
     "socket.io-client": "^4.8.1",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "three": "^0.169.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/bn.js": "^5.2.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
