--- a/package.json
+++ b/package.json
@@ -4,18 +4,19 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "npx prisma generate && next build",
-    "start": "npx prisma migrate deploy && next start",
+    "build": "pnpm exec prisma generate && next build",
+    "start": "pnpm exec prisma migrate deploy && next start",
     "lint": "next lint",
-    "postinstall": "npx prisma generate",
-    "db:push": "npx prisma db push",
-    "db:migrate": "npx prisma migrate deploy",
-    "postdeploy": "npx prisma generate && npx prisma db push"
+    "postinstall": "pnpm exec prisma generate",
+    "db:push": "pnpm exec prisma db push",
+    "db:migrate": "pnpm exec prisma migrate deploy",
+    "postdeploy": "pnpm exec prisma generate && pnpm exec prisma db push"
   },
   "dependencies": {
     "@metaplex-foundation/umi": "^1.2.0",
     "@metaplex-foundation/umi-bundle-defaults": "^1.2.0",
     "@metaplex-foundation/umi-signer-wallet-adapters": "^1.2.0",
+    "@metaplex-foundation/umi-web3js-adapters": "^1.2.0",
     "@prisma/client": "^6.14.0",
     "@prisma/extension-optimize": "^2.0.0",
     "@privy-io/react-auth": "^2.21.1",
@@ -28,13 +29,13 @@
     "@react-three/fiber": "^9.3.0",
     "@reflectmoney/stable.ts": "^2.2.0",
     "@solana-mobile/wallet-standard-mobile": "^0.4.1",
-    "@solana-program/system": "^0.7.0",
-    "@solana-program/token": "^0.7.0",
     "@solana/kit": "^2.3.0",
     "@solana/spl-token": "^0.4.13",
     "@solana/wallet-adapter-react": "^0.15.39",
     "@solana/web3.js": "^1.98.4",
     "@verxioprotocol/core": "^0.1.3",
+    "bn.js": "^5.2.2",
+    "bs58": "^5.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
