--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "pnpm exec prisma generate && next build",
-    "start": "pnpm exec prisma migrate deploy && next start",
+    "build": "prisma generate && next build",
+    "start": "prisma migrate deploy && next start",
     "lint": "next lint",
-    "postinstall": "pnpm exec prisma generate",
-    "db:push": "pnpm exec prisma db push",
-    "db:migrate": "pnpm exec prisma migrate deploy",
-    "postdeploy": "pnpm exec prisma generate && pnpm exec prisma db push"
+    "postinstall": "prisma generate",
+    "db:push": "prisma db push",
+    "db:migrate": "prisma migrate deploy",
+    "postdeploy": "prisma generate && prisma db push"
   },
   "dependencies": {
     "@metaplex-foundation/umi": "^1.2.0",
@@ -66,5 +66,9 @@
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.6",
     "typescript": "^5"
+  }
+  ,
+  "engines": {
+    "node": ">=20.18.0"
   }
 }
