fixed the railway bundle redundancy

--- a/env.template
+++ b/env.template
@@ -11,5 +11,6 @@ FEE_ADDRESS=FEE_PAYER_PUBLIC_ADDRESS
 USDC_MINT=USDC_NETWORK_ADDRESS
 AUTHORIZED_ADDRESS=PROTOCOL_ADMIN_WALLET_ADDRESS
 DATABASE_URL=
+DIRECT_DATABASE_URL=
 OPTIMIZE_API_KEY=
 PRISMA_FIELD_ENCRYPTION_KEY=
