--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@solana/spl-token": "^0.4.13",
     "@solana/wallet-adapter-react": "^0.15.39",
     "@solana/web3.js": "^1.98.4",
+    "@solana-program/token": "^0.5.1",
     "@verxioprotocol/core": "^0.1.3",
     "bn.js": "^5.2.2",
     "bs58": "^5.0.0",
@@ -47,7 +48,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-toastify": "^11.0.5",
-    "rpc-websockets": "^9.2.0",
+    "rpc-websockets": "7.11.0",
     "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.3.1",
     "three": "^0.169.0"
